# dbl-observer

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  env_loader.ps1  inventory_summary.json  pyproject.toml
dbl-reference/: pyproject.toml
docs/: design.md
docs/contracts/: canonicalization.md  cli.md  compatibility.md  conceptual.md  diagnostics.md  digest.md  index.md  raw-input.md  ui-wire.md  wire.md
src/dbl_observer/: __init__.py  canon.py  cli.py  diagnostics.py  digest.py  gateway.py  model.py  project.py  render.py  server.py  ui.html
src/dbl_observer/core/: __init__.py  event_store.py  event_types.py  projection_index.py  projection_types.py  signal_engine.py  signal_types.py
tests/: test_canonicalization_contract.py  test_cli_contract.py  test_cli_golden_output.py  test_contract_status.py  test_determinism.py  test_diagnostics_vocabulary.py  test_diff_contract.py  test_observation_non_interference.py  test_projections.py  test_trace_identity.py
tests/data/: expected_diagnostic.txt  expected_explain.txt  raw_input.jsonl  trace_input.jsonl
