[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbl-observer"
version = "0.2.0"
description = "Observation-only visibility over KL/DBL artifacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
dbl-observer = "dbl_observer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
