[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbl-observer"
version = "0.3.1"
description = "Observation-only visibility over KL/DBL artifacts."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.23,<1",
]

[project.scripts]
dbl-observer = "dbl_observer.cli:main"
dbl-observer-server = "dbl_observer.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
