[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbl-reference"
version = "0.1.0"
description = "Reference-grade DBL implementation: deterministic governance over non-deterministic execution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
dbl-reference = "dbl_reference.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
